--- a/index.html
+++ b/index.html
@@ -1,23 +1,69 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="app.css">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <!-- Bootstrap CSS -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="app.css">
+
+
+  <title>Hello, world!</title>
+</head>
+
+<body>
+  <div class="container-fluid bg-gradient">
+    <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span id="dot-io">.IO</span>
+    </h1>
+  </div>
+  <br>
+  <div class="container">
+    <!-- <p class="text-center search-box">Search</p> -->
+    <div class="wrapper">
+      <input type="search" class="form-control text-center search-box" id="mySearch" name="q"
+        placeholder="Enter GitHub Username...">
+      <!-- class="form-control" adds Bootstrap themeing to form box which spans it the lenght of the container, to match the large button.  -->
+      <br>
+      <button type="button" onclick="location.href='search-result.html'"
+        class="btn btn-secondary btn-lg btn-block">Search</button>
+      <!-- 'onclick="...'  takes user to search-result.html. This is a placeholder till an actual working search can happen. -->
+    </div>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ratione ea sequi cupiditate
+      deserunt corrupti. Aut distinctio ullam dolorem dicta consequatur minima atque esse. Quaerat nobis quis itaque
+      voluptatem expedita.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti officiis vero earum eius consequatur adipisci
+      laborum at nisi corrupti incidunt est culpa natus quo itaque non doloribus, dolore debitis exercitationem!
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi modi cupiditate ab cumque harum voluptates
+      fuga, deserunt vero reiciendis obcaecati iusto labore tempora rerum rem nobis. Tempore, voluptatem rem.
+    </p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ratione ea sequi cupiditate
+      deserunt corrupti. Aut distinctio ullam dolorem dicta consequatur minima atque esse. Quaerat nobis quis itaque
+      voluptatem expedita.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti officiis vero earum eius consequatur adipisci
+      laborum at nisi corrupti incidunt est culpa natus quo itaque non doloribus, dolore debitis exercitationem!
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi modi cupiditate ab cumque harum voluptates
+      fuga, deserunt vero reiciendis obcaecati iusto labore tempora rerum rem nobis. Tempore, voluptatem rem.
+    </p>
+  </div>
+
+
+  <!-- Optional JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
