--- a/search-result.html
+++ b/search-result.html
@@ -8,12 +8,12 @@
 
     <!-- Bootstrap CSS -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css">
 
 
-    <title>Hello, world!</title>
+    <title>Rep_Hub.io - Reputation Tracker for GitHub Users</title>
 </head>
 
 <body>
@@ -24,19 +24,49 @@
     </div>
     <br>
     <div class="container">
-
+        <div class="row">
+            <div class="col">Back to Search</div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col">PFP Placeholder</div>
+            <div class="col">Username</div>
+        </div>
+        <Div class="row">Bio Placeholder Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil possimus itaque
+            qui quo cum laboriosam iure laudantium. Fugiat quam nulla eum totam fugit maiores qui! Temporibus reiciendis
+            veniam porro eveniet!</Div>
+    </div>
+    <br>
+    <div class="container">
+        <div class="row">Rep: 800</div>
+        <!-- display value of rep score here^ -->
+        <div class="row">RECOMMENDED</div>
+        <div class="row">NOT RECOMMENDED</div>
+        <!-- only display 1 or these 2 rows, with the other one hidden. choose which one to display depending on user score. not exactly sure how to code that, so im just leaving both in. -->
+    </div>
+    <br>
+    <div class="container">
+        <div class="row">clickable up arrow</div>
+        <div class="row">clickable down arrow</div>
+        <div class="row">large form for review</div>
+        <div class="row">submit review button</div>
+    </div>
+    <br>
+    <div class="container">
+        <div class="row">link to github progile of user leaving review with text being there name</div>
+        <div class="row">upvote or downvote arrow depending on neg or pos review (only display 1 arrow)</div>
+        <div class="row">review text placeholder Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            omnis eveniet mollitia, facere nisi sit cumque quibusdam velit consequuntur. Rerum repellat veniam quos
+            maxime eligendi fugiat quo quasi. Nesciunt, officia!v</div>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </div>
 
-
-    <!-- Optional JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+    <!-- Optional JavaScript | in BUNDLE form -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
 
