fixed the mobile version etc
Added new tags and flex to properly align items

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-  <div class="container-fluid bg-gradient">
+  <div class="container-fluid bg-gradient" id="header-div">
     <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span id="dot-io">.IO</span>
     </h1>
   </div>
   <br>
-  <div class="container">
+  <div class="container" id="body-area">
     <!-- <p class="text-center search-box">Search</p> -->
     <div class="wrapper">
       <input type="search" class="form-control text-center search-box" id="mySearch" name="q"
@@ -34,6 +34,7 @@
       <!-- 'onclick="...'  takes user to search-result.html. This is a placeholder till an actual working search can happen. -->
     </div>
     <br>
+    <div class="container" id="body-copy">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ratione ea sequi cupiditate
       deserunt corrupti. Aut distinctio ullam dolorem dicta consequatur minima atque esse. Quaerat nobis quis itaque
       voluptatem expedita.
@@ -51,6 +52,7 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi modi cupiditate ab cumque harum voluptates
       fuga, deserunt vero reiciendis obcaecati iusto labore tempora rerum rem nobis. Tempore, voluptatem rem.
     </p>
+  </div>
   </div>
 
 
