--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="container-fluid bg-gradient" id="header-div">
+  <div class="container-fluid bg-gradient-alt" id="header-div">
     <h1 class="logo-text text-center"><span id="rep">REP</span><span id="hub">_HUB</span><span id="dot-io">.IO</span>
     </h1>
   </div>
