--- a/search-result.html
+++ b/search-result.html
@@ -55,7 +55,7 @@
     </div>
     <br>
     <div class="container">
-        <div class="row">link to github progile of user leaving review with text being there name</div>
+        <div class="row">link to github profile of user leaving review with text being there name</div>
         <div class="row">upvote or downvote arrow depending on neg or pos review (only display 1 arrow)</div>
         <div class="row">review text placeholder Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
             omnis eveniet mollitia, facere nisi sit cumque quibusdam velit consequuntur. Rerum repellat veniam quos
